13/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-networkpolicy
  namespace: app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
